--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "d3": "^5.0.0",
     "d3-uml": "file:../../../WebstormProjects/d3-uml",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.11"
+    "react-scripts": "1.0.11",
+    "react-treebeard": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
