--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^0.18.0",
     "d3": "^5.0.0",
     "d3-uml": "file:../../../WebstormProjects/d3-uml",
+    "prop-types": "^15.6.1",
+    "rc-tree": "^1.11.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-router": "^4.1.2",
