--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-loader": "7.1.1",
     "babel-preset-react-app": "^3.0.2",
     "babel-runtime": "6.23.0",
+    "bootstrap": "^4.1.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "css-loader": "0.28.4",
@@ -37,6 +38,7 @@
     "prop-types": "^15.6.1",
     "rc-tree": "^1.11.0",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.32.1",
     "react-dev-utils": "^3.1.0",
     "react-dom": "^15.6.1",
     "react-error-overlay": "^1.0.10",
@@ -98,6 +100,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "html-webpack-externals-plugin": "^3.7.0",
     "less": "^3.0.2",
     "less-loader": "^4.1.0"
   }
