--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "d3": "^5.0.0",
     "d3-uml": "file:../../../WebstormProjects/d3-uml",
     "dotenv": "4.0.0",
+    "element-react": "^1.4.16",
+    "element-theme-default": "^1.4.13",
     "eslint": "4.4.1",
     "eslint-config-react-app": "^2.0.0",
     "eslint-loader": "1.9.0",
