--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "react-router": "^4.1.2",
     "react-router-dom": "^4.1.2",
     "react-treebeard": "^2.1.0",
+    "sockjs-client": "^1.1.4",
+    "stompjs": "^2.3.3",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
